--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ p {
   width: 60%;
   line-height: 1.5;
   margin-bottom: 5px;
+  text-align: center;
+  max-width: 700px;
 }
 
 #input-container {
