--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ button {
 }
 
 #reset:hover {
-  border-color: #1a3b52;
+  background-color: #FAF9F6;
 }
 
 .exportBtn  {
@@ -160,6 +160,16 @@ p.FAQ {
   width: 100%;
 }
 
+hr {
+  border: 0;
+  clear:both;
+  display:block;
+  width: 30%;
+  margin: 30px auto;
+  background-color:#212427;
+  height: 2px;
+}
+
 @media (max-width: 767px) {
   #input-container {
     flex-direction: column;
@@ -173,6 +183,7 @@ p.FAQ {
   }
   p {
     width: 100%;
+    text-align: justify;
   }
   #copy {
     margin-top: 20px;
